# movie-forums

./: README.md  db.sqlite3  index.html
backend/: Cargo.toml  index.html
backend/assets/: script.js  style.css
backend/src/: main.rs
frontend/src/: App.css  App.tsx
src/: main.rs
